docs-archive/apache-airflow-providers-atlassian-jira/3.1.1/_sources/_api/airflow/providers/atlassian/jira/hooks/jira/index.rst.txt
airflow.providers.atlassian.jira.hooks.jira
===========================================

.. py:module:: airflow.providers.atlassian.jira.hooks.jira

.. autoapi-nested-parse::

   Hook for JIRA.



Classes
-------

.. autoapisummary::

   airflow.providers.atlassian.jira.hooks.jira.JiraHook


Module Contents
---------------

.. py:class:: JiraHook(jira_conn_id = default_conn_name, proxies = None)

   Bases: :py:obj:`airflow.sdk.BaseHook`


   Jira interaction hook, a Wrapper around Atlassian Jira Python SDK.

   :param jira_conn_id: reference to a pre-defined Jira Connection


   .. py:attribute:: default_conn_name
      :value: 'jira_default'



   .. py:attribute:: conn_type
      :value: 'jira'



   .. py:attribute:: conn_name_attr
      :value: 'jira_conn_id'



   .. py:attribute:: hook_name
      :value: 'JIRA'



   .. py:attribute:: jira_conn_id
      :value: 'jira_default'



   .. py:attribute:: proxies
      :value: None



   .. py:attribute:: client
      :type:  atlassian.Jira | None
      :value: None



   .. py:method:: get_conn()

      Return connection for the hook.



   .. py:method:: get_connection_form_widgets()
      :classmethod:


      Return connection widgets to add to Atlassian Jira Connection form.



   .. py:method:: get_ui_field_behaviour()
      :classmethod:


      Return custom UI field behaviour for Atlassian Jira Connection.



