docs-archive/apache-airflow-providers-atlassian-jira/3.3.5/_sources/_api/airflow/providers/atlassian/jira/hooks/jira/index.rst.txt
airflow.providers.atlassian.jira.hooks.jira
===========================================

.. py:module:: airflow.providers.atlassian.jira.hooks.jira

.. autoapi-nested-parse::

   Hook for JIRA.

   .. spelling:word-list::

       ClientResponse
       aiohttp
       reqrep



Classes
-------

.. autoapisummary::

   airflow.providers.atlassian.jira.hooks.jira.JiraHook
   airflow.providers.atlassian.jira.hooks.jira.JiraAsyncHook


Module Contents
---------------

.. py:class:: JiraHook(jira_conn_id = default_conn_name, proxies = None, api_root = 'rest/api', api_version = '2')

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseHook`


   Jira interaction hook, a Wrapper around Atlassian Jira Python SDK.

   :param jira_conn_id: reference to a pre-defined Jira Connection
   :param proxies: Proxies to make the Jira REST API call. Optional
   :param api_root: root for the api requests. Optional
   :param api_version: Jira api version to use. Optional


   .. py:attribute:: default_conn_name
      :value: 'jira_default'



   .. py:attribute:: conn_type
      :value: 'jira'



   .. py:attribute:: conn_name_attr
      :value: 'jira_conn_id'



   .. py:attribute:: hook_name
      :value: 'JIRA'



   .. py:attribute:: jira_conn_id
      :value: 'jira_default'



   .. py:attribute:: proxies
      :value: None



   .. py:attribute:: api_root
      :value: 'rest/api'



   .. py:attribute:: api_version
      :value: '2'



   .. py:attribute:: client
      :type:  atlassian.Jira | None
      :value: None



   .. py:method:: get_conn()

      Return connection for the hook.



   .. py:method:: get_connection_form_widgets()
      :classmethod:


      Return connection widgets to add to Atlassian Jira Connection form.



   .. py:method:: get_ui_field_behaviour()
      :classmethod:


      Return custom UI field behaviour for Atlassian Jira Connection.



.. py:class:: JiraAsyncHook(jira_conn_id = default_conn_name, api_root = 'rest/api', api_version = '2', proxies = None)

   Bases: :py:obj:`airflow.providers.http.hooks.http.HttpAsyncHook`


   Async Jira interaction hook, interacts with Jira with HTTP.

   :param jira_conn_id: reference to a pre-defined Jira Connection
   :param api_root: root for the api requests
   :param api_version: api version to use
   :param proxies: Specify proxies to use. Defaults to None.



   .. py:attribute:: default_headers


   .. py:attribute:: default_conn_name
      :value: 'jira_default'



   .. py:attribute:: conn_type
      :value: 'jira'



   .. py:attribute:: conn_name_attr
      :value: 'jira_conn_id'



   .. py:attribute:: hook_name
      :value: 'Async HTTP JIRA'



   .. py:attribute:: method
      :value: 'POST'



   .. py:attribute:: api_root
      :value: 'rest/api'



   .. py:attribute:: api_version
      :value: '2'



   .. py:attribute:: http_conn_id
      :value: 'jira_default'



   .. py:attribute:: proxies
      :value: None



   .. py:method:: get_resource_url(resource, api_root = None, api_version = None)

      Create the resource url.

      :param resource: Jira resource
      :param api_root: root for the api requests
      :param api_version: request payload
      :return: resource URL




   .. py:method:: create_issue(fields)
      :async:


      Create an issue or a sub-task from a JSON representation.

      :param fields: JSON data. mandatory keys are issue type, summary and project
      :return: client response



